@@ -1,4 +1,4 @@
-- name: node_stats
+- name: node.stats
   type: group
   description: >
     node_stats metrics.
