@@ -8,12 +8,19 @@ import (
 	"github.com/elastic/beats/metricbeat/mb/parse"
 )
 
+const (
+	moduleName    = "logstash"
+	metricsetName = "node_stats"
+	namespace     = "logstash.node.stats"
+)
+
 // init registers the MetricSet with the central registry.
 // The New method will be called after the setup of the module and before starting to fetch data
 func init() {
-	if err := mb.Registry.AddMetricSet("logstash", "node_stats", New, hostParser); err != nil {
-		panic(err)
-	}
+	mb.Registry.MustAddMetricSet(moduleName, metricsetName, New,
+		mb.WithHostParser(hostParser),
+		mb.WithNamespace(namespace),
+	)
 }
 
 var (
